2009-01-22  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.Data.PostGIS/lib/Mono.License.txt:
	* Cumberland.Data.PostGIS/lib/Mono.Security.dll:
	* Cumberland.Data.PostGIS/lib/Mono.Security.dll.mdb:
	* Cumberland.Data.PostGIS/Cumberland.Data.PostGIS.csproj: explicitly add
	mono.security for windows users

2009-01-22  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.MapToKml/Cumberland.MapToKml.csproj: fix output name

2009-01-22  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.DrawMap/AssemblyInfo.cs:
	* Cumberland.MapToKml/AssemblyInfo.cs:
	* Cumberland.Data.PostGIS/AssemblyInfo.cs:
	* Cumberland.Data.SqlServer/AssemblyInfo.cs:
	* Cumberland.TilePyramidGenerator/AssemblyInfo.cs:
	* Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs: bump version to 0.3

2009-01-22  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.MapToKml/Main.cs: add help and version options

	* Cumberland.DrawMap/Main.cs: correct example usage

2009-01-15  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.TilePyramidGenerator/Main.cs: force en-us culture on
	extents for consistency

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* cumberland.sln:
	* Cumberland.MapToKml/Main.cs:
	* Cumberland.DrawMap/Cumberland.DrawMap.csproj:
	* Cumberland.MapToKml/Cumberland.MapToKml.csproj:
	* Cumberland.Data.PostGIS/Cumberland.Data.PostGIS.csproj:
	* Cumberland.Data.SqlServer/Cumberland.Data.SqlServer.csproj:
	* Cumberland.TilePyramidGenerator/Cumberland.TilePyramidGenerator.csproj:
	* Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
	add back map2kml minus .net 3.5 stuff

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.DrawMap/Main.cs:
	* Cumberland.TilePyramidGenerator/Main.cs:
	* Cumberland.Data.SqlServer.Loader/Main.cs: add version option

2008-12-30  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: