@@ -1,5 +1,10 @@
 2009-01-22  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Cumberland.DrawMap/Cumberland.DrawMap.csproj:
+	* Cumberland.Data.PostGIS/Cumberland.Data.PostGIS.csproj: misc
+
+2009-01-22  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Cumberland.Data.PostGIS/lib/Mono.License.txt:
 	* Cumberland.Data.PostGIS/lib/Mono.Security.dll:
 	* Cumberland.Data.PostGIS/lib/Mono.Security.dll.mdb:
